--- a/w1_python_ml_intro.qmd
+++ b/w1_python_ml_intro.qmd
@@ -1,6 +1,4 @@
----
 title: 第一讲：Python基础与机器学习入门
----
 
 ```{python}
 #| echo: false
@@ -26,8 +24,6 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ## 开场：我们为什么要学机器学习？
 
----
-
 ### 思考：这些场景有什么共同点？
 
 :::: {.columns}
@@ -48,8 +44,6 @@ plt.rcParams['axes.unicode_minus'] = False
 - 预测未来一周走势
 :::
 ::::
-
----
 
 ### 共同点：都需要处理复杂数据和决策
 
@@ -72,7 +66,6 @@ ELSE 拒绝贷款
 - 无法处理复杂情况（如：收入4800但有房产、稳定工作等）
 - 数据更新后规则可能失效，需要手动调整
 
----
 
 ### 这就是机器学习可以解决的问题！
 
@@ -93,11 +86,9 @@ flowchart LR
 - 模型会自动找到"什么样的人容易违约"
 - 数据越多，学习得越准确
 
----
 
 ## 第一部分：什么是机器学习？
 
----
 
 ### 定义：机器学习的本质
 
@@ -140,7 +131,6 @@ flowchart TB
 :::
 ::::
 
----
 
 ### 为什么需要机器学习？维度诅咒
 
@@ -160,7 +150,6 @@ flowchart TB
 - 传统的人工规则难以覆盖所有情况
 - 需要机器学习从数据中自动学习模式
 
----
 
 #### 传统编程的困境
 
@@ -178,7 +167,6 @@ flowchart TB
 - **非线性模式**：能处理特征间的非线性交互
 - **可扩展性**：特征维度增加时，算法仍然有效
 
----
 
 ### 机器学习 vs 传统编程
 
@@ -190,7 +178,6 @@ flowchart TB
 | **优点** | 逻辑清晰、可解释 | 能处理复杂模式 |
 | **缺点** | 难以处理复杂问题 | 需要大量数据 |
 
----
 
 ### 机器学习的分类
 
@@ -214,20 +201,19 @@ flowchart TB
 
 **本课程重点：监督学习**（因为金融领域90%的问题都是监督学习）
 
----
 
 ### 大语言模型（LLM）与机器学习分类
 
 #### 什么是大语言模型？
 
-**大语言模型（Large Language Models）**：如 GPT、Claude、GLM 等
+**大语言模型（Large Language Models）**：如 GPT、Claude、DeepSeek 等
 
 **核心特点：**
+
 - **参数规模巨大**：数十亿到数万亿参数
 - **预训练 + 微调**：两阶段训练策略
 - **生成式AI**：不仅能分类，还能生成文本
 
----
 
 #### LLM 在机器学习分类中的位置
 
@@ -258,17 +244,18 @@ flowchart TB
 
 **LLM 仍然属于监督学习！**
 
----
 
 #### 为什么 LLM 这么火？
 
 1. **数据规模的突破**
 
 **传统机器学习：**
+
 - 数据集：几千到几万个样本
 - 特征：几到几百个
 
 **大语言模型：**
+
 - 数据集：万亿级别的文本数据
 - 特征：数万亿个参数自动学习
 
@@ -286,7 +273,6 @@ flowchart TB
 **小模型**：能做简单任务
 **大模型**：突然获得复杂能力（如数学推理、代码编写）
 
----
 
 #### LLM 与传统机器学习的区别
 
@@ -299,7 +285,6 @@ flowchart TB
 | **应用场景** | 预测、分类 | 生成、理解、对话 |
 | **可解释性** | 较高 | 较低 |
 
----
 
 #### LLM 在金融领域的应用
 
@@ -325,7 +310,6 @@ flowchart TB
 
 **未来展望：** LLM 将成为金融从业者的"智能助手"
 
----
 
 ### 机器学习的技术演进
 
@@ -343,11 +327,9 @@ timeline
 
 **我们正处于 AI 发展的激动人心的时刻！**
 
----
 
 ## 第二部分：监督学习详解
 
----
 
 ### 什么是监督学习？
 
@@ -359,7 +341,6 @@ timeline
 - 你通过练习学会解题方法
 - 考试时遇到新题，能用学到的方法求解
 
----
 
 ### 监督学习的完整流程
 
@@ -381,7 +362,6 @@ flowchart LR
     style G fill:#e1e5ff
 ```
 
----
 
 ### 核心概念1：特征（Features）
 
@@ -401,7 +381,6 @@ flowchart LR
 - 差特征：无关信息（如房主姓氏）
 - 特征工程：创造新特征（如 面积/房间数 = 人均面积）
 
----
 
 ### 核心概念2：标签（Label）
 
@@ -433,7 +412,6 @@ flowchart LR
 
 **本周重点：回归问题（预测数值）**
 
----
 
 ### 核心概念3：模型（Model）
 
@@ -455,7 +433,6 @@ $$
 - 系数-2：房龄每增加1年，房价减少2万
 - 常数50：基础价格50万
 
----
 
 ### 训练（Training）= 让模型学习
 
@@ -504,11 +481,9 @@ plt.tight_layout()
 plt.show()
 ```
 
----
 
 ## 第三部分：分类 vs 回归
 
----
 
 ### 回归问题：预测连续数值
 
@@ -527,7 +502,6 @@ plt.show()
 - 关心预测值与真实值的**距离**
 - 评估指标：MAE、RMSE（下周详讲）
 
----
 
 ### 分类问题：预测离散类别
 
@@ -563,7 +537,6 @@ plt.show()
 - 关心是否**分对了类**
 - 评估指标：准确率、AUC（第三周详讲）
 
----
 
 ### 快速判断：分类还是回归？
 
@@ -578,11 +551,9 @@ plt.show()
 | 预测股票明天收盘价 | 106.8元 | 回归 | 连续数值 |
 | 推荐系统（买/不买） | 买/不买 | 分类 | 2个类别 |
 
----
 
 ## 第四部分：线性回归入门
 
----
 
 ### 最简单的例子：一维线性回归
 
@@ -601,7 +572,6 @@ $$
 
 **几何意义：** 在二维平面上画一条直线
 
----
 
 ### 可视化理解线性回归
 
@@ -639,7 +609,6 @@ print(f"学到的参数：斜率 w = {model.coef_[0]:.2f}，截距 b = {model.in
 print(f"解释：面积每增加1m²，房价增加{model.coef_[0]:.2f}万元")
 ```
 
----
 
 ### 训练目标：最小化误差
 
@@ -659,7 +628,6 @@ $$
 
 **算法会自动找到使Loss最小的w和b**
 
----
 
 ### 多维线性回归
 
@@ -681,11 +649,9 @@ $$
 - 基础价格 +50万
 - **总计：335万**
 
----
 
 ## 第五部分：训练集与测试集
 
----
 
 ### 为什么要切分数据？
 
@@ -700,7 +666,6 @@ $$
 
 **真正的考验：** 遇到新题目能不能做对？
 
----
 
 ### 类比：练习题 vs 考试题
 
@@ -728,7 +693,6 @@ $$
 
 **核心原则：** 训练集和测试集必须严格分开，测试集不能参与任何训练过程
 
----
 
 ### 数据切分流程
 
@@ -755,7 +719,6 @@ flowchart TB
 - 数据中（1万-10万）：80% 训练 + 20% 测试
 - 数据少（<1万）：70% 训练 + 30% 测试，或使用交叉验证
 
----
 
 ### 代码演示：数据切分
 
@@ -781,11 +744,9 @@ print(f"测试集的前5个样本索引：{y_test[:5]}")
 
 **注意：** `random_state=42` 保证每次切分结果相同（可复现）
 
----
 
 ## 第六部分：过拟合与欠拟合
 
----
 
 ### 核心问题：模型的复杂度
 
@@ -795,7 +756,6 @@ print(f"测试集的前5个样本索引：{y_test[:5]}")
 
 **刚刚好 → 泛化能力强**
 
----
 
 ### 欠拟合：模型太简单
 
@@ -832,7 +792,6 @@ print("测试集误差：大")
 print("结论：模型能力不足")
 ```
 
----
 
 ### 过拟合：模型太复杂
 
@@ -877,7 +836,6 @@ print("测试集误差：非常大（曲线在训练点之外剧烈波动）")
 print("结论：模型记住了噪声，不能泛化")
 ```
 
----
 
 ### 恰到好处：良好的泛化能力
 
@@ -929,7 +887,6 @@ plt.tight_layout()
 plt.show()
 ```
 
----
 
 ### 如何判断过拟合？
 
@@ -943,7 +900,6 @@ plt.show()
 
 **经验法则：** 测试集误差比训练集误差大一点是正常的，但不应该大很多
 
----
 
 ### 类比：背题 vs 理解原理
 
@@ -979,11 +935,9 @@ plt.show()
 :::
 ::::
 
----
 
 ## 第七部分：完整的机器学习流程
 
----
 
 ### 端到端的完整流程
 
@@ -1009,7 +963,6 @@ flowchart TD
     style L fill:#fff9e1
 ```
 
----
 
 ### 第一个完整例子：房价预测
 
@@ -1042,7 +995,6 @@ print(f"学到的参数：w={model.coef_[0]:.2f}, b={model.intercept_:.2f}")
 print(f"测试集平均误差：{mae:.2f}万元")
 ```
 
----
 
 ### 可视化预测结果
 
@@ -1065,11 +1017,9 @@ plt.grid(alpha=0.3)
 plt.show()
 ```
 
----
 
 ## 总结
 
----
 
 ### 本讲核心知识点
 
@@ -1103,7 +1053,6 @@ plt.show()
 - 关注模型的泛化能力，不只看训练集
 - 模型复杂度要适中，避免过拟合
 
----
 
 ## Q&A
 
@@ -1117,7 +1066,6 @@ plt.show()
 * 传统编程：输入是 规则 + 数据 $\rightarrow$ 输出是 答案。程序员需要手动定义所有规则。
 * 机器学习：输入是 数据 + 答案（标签） $\rightarrow$ 输出是 规则（模型）。机器自动从数据中学习规律。
 
----
 
 **Q2：什么是监督学习？请举一个金融领域的例子，并说明它的“特征”和“标签”分别是什么。**
 
@@ -1128,7 +1076,6 @@ plt.show()
 * 特征 (X)：用来预测的信息，例如客户的年龄、收入、历史信用分、负债率等。
 * 标签 (y)：我们要预测的目标，例如该客户“是否会违约”（是/否）。
 
----
 
 **Q3：如何快速区分“分类”问题和“回归”问题？请判断以下两个任务分别属于哪一类：**
 
@@ -1142,7 +1089,6 @@ plt.show()
 1.  预测“涨”还是“跌”：输出是两个固定的类别，属于分类问题。
 2.  预测“收盘价”：输出是一个具体的、连续的数字（可以是105.3, 105.4等任意值），属于回归问题。
 
----
 
 **Q4：为什么我们需要将数据分为训练集和测试集？**
 
@@ -1154,7 +1100,6 @@ plt.show()
 * 测试集（考试题）用于评估模型的泛化能力。
 如果只看模型在训练集上的表现，可能会高估模型的性能，因为模型可能只是“死记硬背”了训练数据（即过拟合），而不是真正学会了规律。
 
----
 
 **Q5：假设你训练了一个模型，发现“训练集误差”很高，“测试集误差”也很高，且两者接近。这最可能是什么问题？你应该采取什么措施？**
 
@@ -1167,7 +1112,6 @@ plt.show()
     1.  使用更复杂的模型（例如，如果用直线拟合曲线数据，就属于欠拟合）。
     2.  增加更多有用的特征（即特征工程）。
 
----
 
 **Q6：假设你训练了另一个模型，发现“训练集误差”极低，但“测试集误差”却非常高。这最可能是什么问题？这揭示了模型在“泛化能力”上的什么缺陷？**
 
@@ -1177,7 +1121,6 @@ plt.show()
 * 缺陷： 这说明模型“泛化能力”很差。模型过于复杂，以至于它不仅仅学习了数据中的普遍规律，还把训练集中的噪声和偶然特征当作了真实规律去“死记硬背”。
 * 表现： 因此，它在熟悉的“练习题”（训练集）上表现完美（误差极低），但在遇到“考试题”（测试集）时，由于新数据的规律或噪声分布不同，模型学到的错误规律就会导致预测表现非常差（误差非常高）。
 
----
 
 **Q7：在多元线性回归模型 $\text{房价} = w_1 \times \text{面积} + w_2 \times \text{房龄} + b$ 中，我们训练得到的系数 $w_2 = -5$。请问这个 $w_2 = -5$ 的具体业务含义是什么？**
 
@@ -1185,7 +1128,6 @@ plt.show()
 
 $w_2 = -5$ 的具体含义是：在保持其他所有特征（例如“面积”）不变的情况下，“房龄”（$x_2$）每增加1个单位（例如1年），“房价”（$y$）平均减少 5 个单位（例如5万元）。
 
----
 
 **Q8：在完整的机器学习流程中，为什么“数据切分”这一步，必须在“数据预处理”（例如下周要学的“归一化”）之前进行？如果顺序反了（即先对所有数据做归一化，再切分），会导致什么严重后果？**
 
