--- a/w2_data_processing.qmd
+++ b/w2_data_processing.qmd
@@ -1,6 +1,4 @@
----
 title: 第二讲：数据处理与线性回归实践
----
 
 ```{python}
 #| echo: false
@@ -26,7 +24,6 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ## 开场：为什么数据预处理如此重要？
 
----
 
 ### 一个真实的场景
 
@@ -51,7 +48,6 @@ plt.rcParams['axes.unicode_minus'] = False
 ❌ **不能！** 模型会学到错误的规律，或者直接报错。
 :::
 
----
 
 ### 本周学习目标
 
@@ -71,11 +67,9 @@ plt.rcParams['axes.unicode_minus'] = False
 **"垃圾进，垃圾出"（Garbage In, Garbage Out）**  
 数据质量决定模型质量！
 
----
 
 ## 第一部分：数据预处理
 
----
 
 ### 缺失值处理
 
@@ -85,7 +79,6 @@ plt.rcParams['axes.unicode_minus'] = False
 - 在 pandas 中显示为 `NaN`（Not a Number）
 - 例子：客户忘记填年龄、传感器故障
 
----
 
 #### 🔍 缺失值处理的首要原则：理解业务逻辑
 
@@ -95,26 +88,24 @@ plt.rcParams['axes.unicode_minus'] = False
 - **隐形缺失**：有些缺失并非数据错误，而是业务逻辑的一部分
 - **填补策略**：优先基于业务逻辑，然后考虑统计方法
 
----
 
 #### 📊 隐形缺失的经典案例
 
 **R&D支出示例**：
 
-```python
-#| echo: true
+公司R&D支出数据示例：
 
-# 金融数据中的R&D支出
-company_data = {
-    '公司名称': ['科技公司A', '传统公司B', '创业公司C'],
-    'R&D支出': [1000, np.nan, 500]  # 传统公司显示为NaN
-}
+| 公司名称     | R&D支出  |
+|------------|----------|
+| 科技公司A   | 1000     |
+| 传统公司B   | NaN      |
+| 创业公司C   | 500      |
 
-# 业务逻辑分析：
-# - 传统公司B没有R&D部门，所以R&D支出应该是0，不是缺失值！
-# - 错误填补：用均值(750) → 传统公司被高估
-# - 正确填补：根据业务逻辑填0 → 准确反映业务现实
-```
+- **业务逻辑分析：**
+
+  - 传统公司B没有R&D部门，所以R&D支出应为0，不是缺失值。
+  - **错误填补：** 如果用均值 (750) 填补，会高估传统公司实际水平。
+  - **正确做法：** 根据业务逻辑填补为0，更准确地反映现实业务情况。
 
 **其他隐形缺失案例**：
 
@@ -122,7 +113,6 @@ company_data = {
 - 电商数据中"退货原因"为空 → 可能未退货，应填"无退货"
 - 医疗数据中"家族遗传病史"为空 → 需要区分"未询问"vs"无家族史"
 
----
 
 #### 缺失值处理决策流程
 
@@ -147,7 +137,6 @@ graph TD
     style I fill:#2196f3,color:#fff
 ```
 
----
 
 #### 删除法
 
@@ -165,7 +154,6 @@ graph TD
 
 **适用场景**：缺失比例很小（<5%）
 
----
 
 #### 填充法
 
@@ -185,7 +173,6 @@ graph TD
 中位数填充: [10, 20, 25, 30, 100]  ← 更稳健 ✓
 ```
 
----
 
 #### 高级方法（简介）
 
@@ -199,7 +186,6 @@ graph TD
 - 综合结果
 - 统计学高级方法
 
----
 
 ### 异常值检测与处理
 
@@ -218,7 +204,6 @@ graph TD
 - 亿万富翁买豪宅（真实但极端） → 保留
 - 录入错误（如 1 元/平米） → 删除/修正
 
----
 
 #### 异常值识别：箱线图
 
@@ -274,7 +259,6 @@ plt.show()
 - **须**：正常数据范围
 - **点**：异常值
 
----
 
 #### 异常值识别：统计方法
 
@@ -296,7 +280,6 @@ IQR = Q3 - Q1
 异常值 = 超出 [均值 - 3×标准差, 均值 + 3×标准差]
 ```
 
----
 
 #### 异常值处理决策
 
@@ -319,7 +302,6 @@ graph TD
 
 **关键原则**：**先分析，再处理！不要盲目删除！**
 
----
 
 ### 归一化（Normalization）
 
@@ -341,7 +323,6 @@ graph TD
 
 **线性回归影响较小，但归一化仍有益**
 
----
 
 #### 两种常用归一化方法
 
@@ -360,7 +341,6 @@ $$
 **缺点**：
 - 对异常值敏感
 
----
 
 **2. Z-score 标准化（均值 0，标准差 1）**
 
@@ -377,7 +357,6 @@ $$
 **缺点**：
 - 结果无界
 
----
 
 #### 归一化前后对比
 
@@ -436,7 +415,6 @@ plt.tight_layout()
 plt.show()
 ```
 
----
 
 #### 何时使用哪种归一化？
 
@@ -446,11 +424,9 @@ plt.show()
 | **Z-score** | 数据有异常值<br/>正态分布<br/>需要保留分布形状 | 逻辑回归<br/>SVM |
 | **不归一化** | 树模型<br/>（决策树、随机森林、GBDT） | 线性回归影响小<br/>但建议归一化 |
 
----
 
 ## 第二部分：回归模型评估
 
----
 
 ### 残差（Residual）
 
@@ -469,11 +445,12 @@ $$
 | 2 | 200 | 210 | -10 |
 | 3 | 300 | 295 | +5 |
 
----
 
 #### 理想的残差
 
 ```{python}
+#| message: false
+#| warning: false
 # 模拟好的模型和差的模型
 np.random.seed(42)
 X = np.linspace(0, 10, 100)
@@ -532,7 +509,6 @@ plt.show()
 - ✓ **好的残差图**：点随机分布在 y=0 附近，无明显趋势
 - ✗ **差的残差图**：有漏斗形、U 形、趋势线等规律
 
----
 
 ### MAE（平均绝对误差）
 
@@ -544,7 +520,6 @@ $$
 
 **直观理解**：所有预测误差的绝对值的平均
 
----
 
 #### MAE 的优缺点
 
@@ -564,7 +539,6 @@ $$
 - 对所有误差一视同仁
 - 例子：房价预测、销量预测
 
----
 
 ### RMSE（均方根误差）
 
@@ -580,7 +554,6 @@ $$
 2. 求平均
 3. 开根号
 
----
 
 #### MAE vs RMSE 对比
 
@@ -614,7 +587,6 @@ print(comparison_data.to_string(index=False))
 - 场景 1（均匀误差）：RMSE ≈ MAE
 - 场景 2（有大误差）：RMSE >> MAE（RMSE 对大误差更敏感）
 
----
 
 #### MAE vs RMSE 总结
 
@@ -629,7 +601,6 @@ print(comparison_data.to_string(index=False))
 - 业务对大误差敏感 → RMSE
 - 只关心平均水平 → MAE
 
----
 
 ### R² 决定系数
 
@@ -644,7 +615,6 @@ $$
 - $SS_{res}$：残差平方和（模型的误差）
 - $SS_{tot}$：总平方和（数据的总变异）
 
----
 
 #### R² 的含义
 
@@ -702,11 +672,9 @@ plt.tight_layout()
 plt.show()
 ```
 
----
 
 ## 第三部分：数据可视化
 
----
 
 ### 为什么需要可视化？
 
@@ -757,7 +725,6 @@ plt.show()
 
 **教训**：**永远要可视化数据！数字不会说谎，但会隐藏真相。**
 
----
 
 ### 常用图表类型
 
@@ -792,7 +759,6 @@ plt.show()
 - 线性/非线性
 - 离群点
 
----
 
 #### 直方图（Histogram）
 
@@ -829,7 +795,6 @@ plt.tight_layout()
 plt.show()
 ```
 
----
 
 #### 相关系数热力图（Heatmap）
 
@@ -863,7 +828,6 @@ plt.show()
 - **蓝色（接近 -1）**：强负相关（房龄↑价格↓）
 - **白色（接近 0）**：无线性关系
 
----
 
 ### 可视化陷阱
 
@@ -896,7 +860,6 @@ plt.show()
 
 **教训**：始终检查 Y 轴起点是否为 0
 
----
 
 #### 陷阱 2：忽略样本量
 
@@ -927,11 +890,9 @@ plt.show()
 
 **教训**：报告统计量时，务必说明样本量
 
----
 
 ## 第四部分：完整实战流程
 
----
 
 ### 完整流程概览
 
@@ -956,11 +917,9 @@ graph TD
     style K fill:#4caf50,color:#fff
 ```
 
----
 
 ## 总结
 
----
 
 ### 本讲知识回顾
 
@@ -982,7 +941,6 @@ graph TD
 - 散点图、直方图、箱线图、热力图
 - **永远先可视化，再建模！**
 
----
 
 ### 核心要点
 
@@ -998,7 +956,6 @@ graph TD
 4. **模型诊断很重要**  
    残差图能发现很多问题
 
----
 
 ## Q&A
 
@@ -1010,7 +967,6 @@ graph TD
 * Z-score 标准化：其目标是将数据转换为均值为 0、标准差为 1 的分布。
 * 树模型不需要的原因：树模型是基于“分裂点”来做决策的（例如“面积 > 80平米”），它关心的是特征的顺序和阈值，而不关心特征的绝对尺度。归一化不会改变特征值的相对顺序，因此对树模型的决策几乎没有影响。
 
----
 
 **Q2：在处理缺失值时，为什么讲义强调第一步是“理解业务逻辑”？请结合课程中“R&D支出”的例子说明。**
 
@@ -1021,7 +977,6 @@ graph TD
 * 错误处理：如果盲目用均值或中位数填充，会错误地高估这家公司的研发投入。
 * 正确处理：通过业务逻辑理解，这家公司很可能没有R&D部门，因此 `NaN` 的真实含义是 0。此时应将其填充为 0 才能准确反映业务现实。
 
----
 
 **Q3：MAE (平均绝对误差) 和 RMSE (均方根误差) 都是评估回归模型的指标。请问 RMSE 的计算方式（平方-求均-开方）有何特点，这导致它对哪种类型的误差（大误差还是小误差）更敏感？**
 
@@ -1030,7 +985,6 @@ graph TD
 * 敏感性：这个“平方”操作会显著放大那些数值较大的误差。
 * 结论：因此，RMSE 相比 MAE 对“大误差”（即预测错得离谱的异常点）更为敏感。如果业务上无法容忍大的预测失误（例如金融风控），RMSE 是一个很重要的参考指标。
 
----
 
 **Q4：课程中的“安斯库姆四重奏”(Anscombe's Quartet) 案例告诉了我们一个关于数据分析的什么重要教训？**
 
@@ -1039,7 +993,6 @@ graph TD
 
 这四组数据的均值、方差、相关系数、甚至回归线都完全相同，但它们的数据分布形态却截然不同。如果只看统计数字，我们会误以为它们是一样的数据；只有通过可视化（如散点图），才能发现真相和数据中隐藏的模式。
 
----
 
 **Q5：某回归模型的 R² (决定系数) 值为 0.8 [cite: 83]。这句话的直观解释是什么？R² 是否有可能为负数？**
 
@@ -1048,7 +1001,6 @@ graph TD
 * 解释：R² = 0.8 意味着，这个模型解释了数据中 80% 的变异性（或方差）。换句话说，相比于“盲猜”所有样本的平均值，这个模型能将预测的误差（用平方和衡量）减少 80%。
 * 是否为负：有可能。R² 为负数意味着模型的预测表现比“直接预测平均值”这个最简单的基线还要差。这通常说明模型非常糟糕，或者数据完全不适合该模型。
 
----
 
 **Q6：你在使用箱线图（Boxplot）进行异常值检测时，发现了一个明显偏离上界（Q3 + 1.5*IQR）的“异常值”。你的下一步处理流程是什么？**
 
@@ -1062,7 +1014,6 @@ graph TD
     * 如果是真实极端值：例如“亿万富翁买豪宅”导致的极高房价，这个数据是真实有效的，应该保留。盲目删除会扭曲数据分布，使模型失去对高端市场的预测能力。
     * 如果不确定：可以尝试替换（例如用边界值替换），或者分别训练“包含”和“不包含”该异常值的模型，对比其对模型稳定性和评估指标的影响，再做决策。
 
----
 
 **Q7：在对线性回归模型进行“残差分析”时，如果你发现残差图（横轴为预测值，纵轴为残差）中的点呈现出明显的“喇叭口”形状（即预测值越大，残差的波动范围越大），这揭示了模型可能存在什么问题？**
 
@@ -1073,7 +1024,6 @@ graph TD
 * 具体表现：在“喇叭口”形态中，当预测值（例如房价）较低时，模型预测得较准（误差小）；但当预测值较高时，模型的预测误差变得非常不稳定（时而偏高，时而偏低，波动范围大）。
 * 影响：这违反了线性回归的基本假设之一（误差方差恒定），可能导致模型的参数估计和置信区间不准确。
 
----
 
 **Q8：假设你在构建两个金融模型：**
 1.  **模型A：预测银行网点的平均每日取款量，用于常规运营规划**。
@@ -1088,7 +1038,6 @@ graph TD
 * 模型B (极端风险)：应该更侧重 RMSE (均方根误差)。
     * 原因：风险控制和熔断机制的核心就是识别和惩罚“大误差”。RMSE 因为计算时有平方项，会极大地惩罚那些预测偏差大的点，侧重 RMSE 能确保模型在“错得最离谱”的极端情况下表现得更好，这对于风控至关重要。
 
----
 
 **Q9：在第一讲我们学到要先切分训练集/测试集。在第二讲我们学习了归一化。为什么“归一化”这个操作（例如 Z-score）必须在“切分数据”之后进行？如果顺序反了，会导致什么严重后果？**
 
