--- a/w3_lm_regularization.qmd
+++ b/w3_lm_regularization.qmd
@@ -1,6 +1,4 @@
----
 title: 第三讲：线性回归的正则化
----
 
 ```{python}
 #| echo: false
@@ -29,7 +27,6 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ## 开场：一个问题
 
----
 
 ### 当模型"太聪明"时...
 
@@ -46,7 +43,6 @@ plt.rcParams['axes.unicode_minus'] = False
 🚨 **过拟合（Overfitting）**：模型记住了训练数据的细节（包括噪声），但不能泛化到新数据！
 :::
 
----
 
 ### 本周学习目标
 
@@ -67,11 +63,9 @@ plt.rcParams['axes.unicode_minus'] = False
 **"简单的模型往往更好"（Occam's Razor）**  
 复杂度与泛化能力的权衡是机器学习的核心！
 
----
 
 ## 第一部分：过拟合与欠拟合
 
----
 
 ### 用多项式回归理解过拟合
 
@@ -135,7 +129,6 @@ plt.tight_layout()
 plt.show()
 ```
 
----
 
 ### 欠拟合 vs 过拟合 vs 刚刚好
 
@@ -151,7 +144,6 @@ plt.show()
 - 过拟合：训练很好，测试很差（**差距大**是关键信号）
 - 刚刚好：训练和测试都还不错，且差距小
 
----
 
 ### Bias-Variance Tradeoff（偏差-方差权衡）
 
@@ -196,11 +188,9 @@ plt.show()
 - **方差（Variance）**：模型对训练数据的"过度敏感"，训练数据稍有变化预测就变很多
 - **目标**：找到偏差和方差都较低的平衡点
 
----
 
 ## 第二部分：正则化的直觉
 
----
 
 ### 什么是正则化？
 
@@ -224,7 +214,6 @@ $$
 - **复杂度惩罚**：防止模型过于复杂
 - **α（alpha）**：权衡两者的超参数
 
----
 
 ### 正则化的类比
 
@@ -240,12 +229,13 @@ $$
 - 在同等拟合效果下，选择更简单的模型
 - 简单模型 = 系数小、特征少
 
----
 
 ### 正则化的几何直觉
 
 ```{python}
 #| echo: false
+#| message: false
+#| warning: false
 #| fig-width: 12
 #| fig-height: 5
 
@@ -297,11 +287,9 @@ plt.show()
 - **L2（圆形）**：约束边界是平滑的，最优解很少正好在坐标轴上 → 系数小但不为0
 - **L1（菱形）**：约束边界有"尖角"在坐标轴上，最优解容易碰到尖角 → 某些系数直接为0
 
----
 
 ## 第三部分：三种正则化方法
 
----
 
 ### Ridge 回归（L2 正则化）
 
@@ -320,7 +308,6 @@ $$
 ✅ **适合所有特征都重要的情况**  
 ✅ **对多重共线性有帮助**
 
----
 
 ### Lasso 回归（L1 正则化）
 
@@ -339,7 +326,6 @@ $$
 ✅ **适合认为只有少数特征重要的情况**  
 ✅ **结果易解释**（特征少）
 
----
 
 ### Elastic Net（L1 + L2）
 
@@ -360,7 +346,6 @@ $$
 ✅ **在相关特征较多时表现更好**  
 ✅ **不确定用哪个时的折中选择**
 
----
 
 ### 三种方法对比总结
 | 方法             | 正则化项                | 权重特点        | 特征选择 | 适用场景         | sklearn类         |
@@ -370,16 +355,16 @@ $$
 | Lasso (L1)       | ∑\|w\|                 | 部分变为0      | 是       | 特征稀疏         | Lasso             |
 | Elastic Net      | ρ∑\|w\| + (1-ρ)∑w²    | 折中           | 是       | 不确定时         | ElasticNet        |
 
----
 
 ## 第四部分：正则化参数 α 的选择
 
----
 
 ### α 的作用
 
 ```{python}
 #| echo: false
+#| message: false
+#| warning: false
 #| fig-width: 12
 #| fig-height: 5
 
@@ -450,7 +435,6 @@ plt.show()
 - **α 适中**：平衡拟合与复杂度 ✓
 - **α 很大**：强正则化，可能欠拟合
 
----
 
 ### 交叉验证（Cross-Validation）
 
@@ -521,11 +505,9 @@ plt.show()
 4. 取平均作为该 α 的评估分数
 5. 选择评分最好的 α
 
----
 
 ## 第五部分：正则化路径与可视化
 
----
 
 ### 正则化路径图（Regularization Path）
 
@@ -533,6 +515,8 @@ plt.show()
 
 ```{python}
 #| echo: false
+#| message: false
+#| warning: false
 #| fig-width: 12
 #| fig-height: 5
 
@@ -593,11 +577,9 @@ plt.show()
 - α 逐渐增大：不重要的特征系数先变为 0
 - α 很大时：几乎所有特征都被剔除
 
----
 
 ## 第六部分：实践建议
 
----
 
 ### 正则化回归完整流程
 
@@ -628,7 +610,6 @@ graph TD
     style I fill:#ffccbc
 ```
 
----
 
 ### 常见错误与注意事项
 
@@ -647,7 +628,6 @@ graph TD
 
 **为什么重要**：正则化惩罚权重的大小，如果特征尺度不同，会导致不公平的惩罚。
 
----
 
 #### ❌ 错误 2：在测试集上选 α
 
@@ -664,7 +644,6 @@ graph TD
 
 **为什么重要**：避免数据泄露，得到真实的模型评估结果。
 
----
 
 #### ❌ 错误 3：选择不合适的正则化方法
 
@@ -676,7 +655,6 @@ graph TD
 | 不确定哪些特征重要     | Elastic Net | Elastic Net是折中方案  |
 | 需要可解释性（特征少） | Lasso       | Lasso产生稀疏模型      |
 
----
 
 ### 实用技巧
 
@@ -713,11 +691,9 @@ graph TD
 
 **为什么重要**：不同正则化方法适合不同场景，盲目选择可能错过最佳方案。
 
----
 
 ## 总结
 
----
 
 ### 本讲核心概念
 
@@ -736,7 +712,6 @@ graph TD
 - **RidgeCV/LassoCV**：自动选择最优 α
 - **正则化路径**：观察 α 变化时系数的变化
 
----
 
 ### 重要提醒
 
@@ -752,7 +727,6 @@ graph TD
 4. **可视化很重要** ⚠️  
    正则化路径图、系数图、残差图
 
----
 
 ## Q&A
 
@@ -763,7 +737,6 @@ graph TD
 * 定义：过拟合是指模型过度学习了训练数据中的细节和噪声，导致它无法很好地泛化到未见过的新数据上。
 * 关键信号：模型在训练集上表现很好（例如RMSE 5万），但在测试集上表现很差（例如RMSE 50万）。训练集表现和测试集表现之间存在巨大差距是过拟合的关键信号。
 
----
 
 **Q2：什么是“正则化”？它如何修改普通线性回归的损失函数？**
 
@@ -773,7 +746,6 @@ graph TD
 * 修改方式：它在普通线性回归的损失函数（拟合误差，如MSE）基础上，额外加入一个“复杂度惩罚项”。
 * 新目标：$\min(\text{拟合误差} + \alpha \times \text{复杂度惩罚})$。这迫使模型在“拟合数据”和“保持简单”之间找到一个平衡。
 
----
 
 **Q3：Ridge 回归和 Lasso 回归各自使用的是哪种正则化惩罚项（L1 还是 L2）？它们的惩罚项在数学上有什么不同？**
 
@@ -782,7 +754,6 @@ graph TD
 * Ridge (L2)：使用 L2 正则化。惩罚项是所有特征系数（权重）的平方和 ($\sum w_j^2$)。
 * Lasso (L1)：使用 L1 正则化。惩罚项是所有特征系数（权重）的绝对值和 ($\sum |w_j|$)。
 
----
 
 **Q4：Lasso (L1) 正则化最独特的特点是什么？这使它在实践中有什么重要应用？**
 
@@ -791,7 +762,6 @@ graph TD
 * 最独特的特点：Lasso 最独特的特点是它能将某些不重要特征的系数（权重）直接压缩到 0。
 * 重要应用：这使 Lasso 具有自动特征选择的功能。它可以帮助我们从大量特征中筛选出真正重要的特征，从而得到一个更简单（稀疏）、可解释性更强的模型。
 
----
 
 **Q5：为什么我们必须使用“交叉验证” (Cross-Validation) 来选择正则化参数 $\alpha$，而不是直接在测试集上选择？**
 
@@ -800,7 +770,6 @@ graph TD
 * 因为测试集的核心原则是“只在最后使用一次”，它用来评估最终模型的泛化能力。
 * 如果在测试集上反复尝试不同的 $\alpha$ 值来“调参”，就相当于让模型在训练过程中“偷看”到了测试集的信息，这称为“数据泄露”。这会导致我们对模型性能的评估过于乐观，得到的不是模型真实的泛化能力。交叉验证允许我们在训练集内部安全地模拟这一评估过程，以找到最优的 $\alpha$。
 
----
 
 **Q6：正则化是如何体现在“偏差-方差权衡” (Bias-Variance Tradeoff) 上的？增加正则化强度（即增大 $\alpha$）时，偏差和方差分别会如何变化？**
 
@@ -812,7 +781,6 @@ graph TD
     2.  降低方差：作为交换，一个更简单的模型对训练数据中特定噪声的敏感度显著降低了，即降低了方差（Variance）。
 * 目标：正则化的目标是找到一个最优的 $\alpha$，在“欠拟合”（偏差高）和“过拟合”（方差高）之间找到一个平衡点，使得总误差（偏差 + 方差）最小。
 
----
 
 **Q7：为什么讲义中反复强调“在应用正则化之前必须标准化特征”？如果忘记标准化（例如，一个特征“面积”范围 50-200，另一个“卧室数”范围 1-5），会导致什么严重后果？**
 
@@ -824,7 +792,6 @@ graph TD
     2.  不公平的惩罚：在计算惩罚项时（例如 L2：$\alpha (w_1^2 + w_2^2)$），模型会极大地惩罚那个尺度小、系数大的特征（$w_2=10$），而几乎忽略那个尺度大、系数小的特征（$w_1=0.01$）。
     3.  结论：忘记标准化会导致正则化的惩罚变得不公平且毫无意义。它会错误地惩罚那些仅仅因为单位尺度小而系数大的特征，而不是真正“不重要”的特征。标准化（如 Z-score）使所有特征处于同一尺度（例如均值0，标准差1），惩罚才会公平有效。
 
----
 
 **Q8：在以下三种场景中，你应优先选择哪种正则化方法（Ridge, Lasso, Elastic Net），并说明理由？**
 
