--- a/w6_neural_networks.qmd
+++ b/w6_neural_networks.qmd
@@ -1,6 +1,4 @@
----
 title: 第六讲：神经网络基础
----
 
 ```{python}
 #| echo: false
@@ -26,7 +24,6 @@ plt.rcParams['axes.unicode_minus'] = False
 
 ## 开场：深度学习的神秘面纱
 
----
 
 ### 深度学习无处不在
 
@@ -42,7 +39,6 @@ plt.rcParams['axes.unicode_minus'] = False
 
 **答案**：**神经网络**
 
----
 
 ### 本周目标：揭开神秘面纱
 
@@ -59,7 +55,6 @@ plt.rcParams['axes.unicode_minus'] = False
 3. 在测试集上评估 MLP 的 AUC
 4. 调整网络结构（层数、神经元数量）
 
----
 
 #### 核心理念
 
@@ -69,11 +64,9 @@ plt.rcParams['axes.unicode_minus'] = False
 - 关键是"学习"：通过数据自动调整参数
 - 不要被复杂的公式吓倒，先建立直觉！
 
----
 
 ## 第一部分：从生物到人工
 
----
 
 ### 1.1 生物神经元
 
@@ -84,7 +77,6 @@ plt.rcParams['axes.unicode_minus'] = False
 - 通过**电信号**传递信息
 - 学习 = 调整神经元之间的**连接强度**
 
----
 
 #### 生物神经元的结构
 
@@ -107,7 +99,6 @@ graph LR
 3. 如果总和超过**阈值**，神经元"发火"（激活）
 4. 通过轴突传递信号给下一个神经元
 
----
 
 ### 1.2 人工神经元
 
@@ -127,7 +118,6 @@ $$
 - $f$：激活函数（决定是否"发火"）
 - $y$：输出
 
----
 
 #### 可视化人工神经元
 
@@ -157,7 +147,6 @@ $$
 y = f(z)
 $$
 
----
 
 #### 具体例子：Titanic 生存预测
 
@@ -174,7 +163,6 @@ $$
 - $w_3 = 0.001$（票价越高越有利）
 - $b = 1$（基础偏置）
 
----
 
 **计算过程**：
 
@@ -196,11 +184,9 @@ y = 1/(1+e^1.2) ≈ 0.23
 - 负权重表示负相关
 - 权重的绝对值表示重要性
 
----
 
 ## 第二部分：激活函数
 
----
 
 ### 为什么需要激活函数？
 
@@ -219,7 +205,6 @@ $$
 
 **激活函数的作用**：**引入非线性**，让网络能学习复杂模式
 
----
 
 ### 常见激活函数
 
@@ -280,7 +265,6 @@ plt.tight_layout()
 plt.show()
 ```
 
----
 
 #### Sigmoid 详解
 
@@ -311,7 +295,6 @@ $$
 - ✓ 二分类问题的**输出层**
 - ✗ 隐藏层（已被 ReLU 取代）
 
----
 
 #### ReLU 详解
 
@@ -340,7 +323,6 @@ $$
 - ✓ **隐藏层首选**
 - ✓ 绝大多数深度学习任务
 
----
 
 #### Tanh 详解
 
@@ -371,7 +353,6 @@ $$
 - 循环神经网络（RNN）
 - 需要零中心输出的场景
 
----
 
 #### 激活函数对比表
 
@@ -389,11 +370,9 @@ $$
   - 多分类 → Softmax（后续会学）
   - 回归 → 不用激活（线性输出）
 
----
 
 ## 第三部分：多层感知机（MLP）
 
----
 
 ### 网络结构
 
@@ -462,7 +441,6 @@ graph LR
     style 输出层 fill:#fce4ec,stroke:#f06292
 ```
 
----
 
 #### 符号表示
 
@@ -475,7 +453,6 @@ graph LR
 
 **简写**：`Input(3) → [4] → [2] → Output(1)`
 
----
 
 ### 参数数量计算
 
@@ -499,7 +476,6 @@ Input(8) → Dense(64, ReLU) → Dense(32, ReLU) → Output(1, Sigmoid)
 - 决策树：只有分裂规则（少量参数）
 - MLP：**数千个参数需要学习**
 
----
 
 ### 为什么需要多层？
 
@@ -512,6 +488,7 @@ Input(8) → Dense(64, ReLU) → Dense(32, ReLU) → Output(1, Sigmoid)
 
 ```{python}
 #| message: false
+#| warning: false
 # XOR 问题示例
 fig, axes = plt.subplots(1, 2, figsize=(12, 5))
 
@@ -554,7 +531,6 @@ plt.tight_layout()
 plt.show()
 ```
 
----
 
 #### 多层的威力：层次特征学习
 
@@ -577,7 +553,6 @@ graph TD
 - 深层：学习复杂特征（组合模式）
 - 这是**自动特征工程**！
 
----
 
 #### 层数选择建议
 
@@ -594,11 +569,9 @@ graph TD
 - 如果欠拟合，增加层数或神经元数
 - 如果过拟合，减少复杂度或使用正则化（下周讲）
 
----
 
 ## 第四部分：前向传播与反向传播
 
----
 
 ### 前向传播（Forward Propagation）
 
@@ -625,7 +598,6 @@ graph LR
 
 **结果**：$\hat{y}$ = 0.85（85% 存活概率）
 
----
 
 ### 损失函数（Loss Function）
 
@@ -644,12 +616,12 @@ $$
 
 **类比**：Loss = 考试分数与满分的差距
 
----
 
 #### 损失函数可视化
 
 ```{python}
 #| message: false
+#| warning: false
 # Binary Cross-Entropy 可视化
 y_true_demo = 1  # 真实标签
 y_pred_range = np.linspace(0.01, 0.99, 100)
@@ -672,7 +644,6 @@ plt.text(0.1, 4, 'ŷ → 0\nLoss → ∞\n(预测错了)', fontsize=11, bbox=dic
 plt.show()
 ```
 
----
 
 ### 反向传播（Backpropagation）
 
@@ -703,7 +674,6 @@ $$
 - $\eta$：学习率（步长）
 - $\frac{\partial \text{Loss}}{\partial W}$：梯度（方向）
 
----
 
 #### 类比：登山下坡
 
@@ -739,7 +709,6 @@ plt.show()
 - 做菜太咸（Loss 大） → 下次少放盐（调整参数）
 - 通过不断尝试，找到最佳配方（最优参数）
 
----
 
 ### 优化器（Optimizer）
 
@@ -755,11 +724,9 @@ plt.show()
 - 初学者：**直接用 Adam**
 - 效果不好再试 SGD
 
----
 
 ## 第五部分：MLP vs 树模型
 
----
 
 ### 何时用树模型，何时用 MLP？
 
@@ -775,7 +742,6 @@ plt.show()
 | **样本量要求** | 小数据也可以（100+） | 需要大量数据（10000+） |
 | **过拟合** | 较容易控制 | 容易过拟合 |
 
----
 
 #### 金融领域实际情况
 
@@ -793,11 +759,9 @@ plt.show()
 - **表格数据（90%的金融任务）** → **树模型**
 - **图像/文本/音频** → 深度学习
 
----
 
 ## 总结
 
----
 
 ### 本讲知识回顾
 
@@ -818,7 +782,6 @@ plt.show()
 - 参数：权重 W + 偏置 b
 - 多层 → 学习复杂非线性模式
 
----
 
 #### 训练过程
 
@@ -836,7 +799,6 @@ plt.show()
 | 文本 | Transformer |
 | 音频 | RNN/CNN |
 
----
 
 ### 核心要点
 
@@ -855,7 +817,6 @@ plt.show()
 5. **Keras 很简单**  
    Sequential API 易上手
 
----
 
 ## Q&A
 
@@ -870,7 +831,6 @@ plt.show()
 2.  激活函数： $y = f(z)$ 
 （其中 $x_i$ 是输入特征，$w_i$ 是权重，$b$ 是偏置，$f$ 是激活函数）
 
----
 
 **Q2：为什么神经网络中必须使用“非线性”激活函数（如 ReLU）？如果只用线性激活（或不用激活），多层网络会退化成什么？**
 
@@ -879,7 +839,6 @@ plt.show()
 * 原因：激活函数的作用是引入非线性，使得网络能够学习和拟合复杂的非线性模式（例如 XOR 问题）。
 * 退化：如果只用线性激活，多层线性叠加的结果仍然是线性的（$W'x + b'$）。这会导致整个深度神经网络退化成一个单层的线性模型（如逻辑回归），失去深度学习的意义。
 
----
 
 **Q3：为神经网络的“隐藏层”和“二分类输出层”选择激活函数时，首选的推荐分别是什么？**
 
@@ -888,7 +847,6 @@ plt.show()
 * 隐藏层首选：ReLU。因为它计算快，并能有效缓解梯度消失问题。
 * 二分类输出层首选：Sigmoid。因为它的输出范围是 (0, 1) ，可以将输出结果解释为概率。
 
----
 
 **Q4：请简要描述“前向传播”（Forward Propagation）和“反向传播”（Backward Propagation）在神经网络训练中的角色。**
 
@@ -897,7 +855,6 @@ plt.show()
 * 前向传播：是指数据从输入层开始，逐层计算，直到在输出层得到预测值（$\hat{y}$）的过程。
 * 反向传播：是指在得到预测值并计算出 Loss（误差）后，从输出层反向逐层计算 Loss 对每个参数（W 和 b）的梯度（贡献度）的过程。
 
----
 
 **Q5：为什么 ReLU ($\max(0, z)$) 作为隐藏层激活函数，通常优于 Sigmoid？Sigmoid 用在隐藏层时有什么主要缺陷？**
 
@@ -907,7 +864,6 @@ ReLU 之所以更优，主要是因为它解决了 Sigmoid 的一个主要缺陷
 * Sigmoid 的缺陷：Sigmoid 函数在输入值（z）很大或很小时，其曲线非常平坦，导致梯度（导数）接近于 0。在反向传播时，这些接近 0 的梯度逐层相乘，导致深层网络的梯度变得极小，使得参数几乎无法更新。
 * ReLU 的优势：当输入 $z > 0$ 时，ReLU 的梯度恒为 1。这使得梯度在反向传播时能够更顺畅地流动，极大地缓解了梯度消失问题，让网络训练得更快、更深。
 
----
 
 **Q6：假设一个 MLP 网络结构为 `Input(10) -> Dense(32, ReLU) -> Output(1, Sigmoid)`。请问从 Input 层到 Dense(32) 层（第一个隐藏层）总共有多少个可训练参数？**
 
@@ -920,7 +876,6 @@ ReLU 之所以更优，主要是因为它解决了 Sigmoid 的一个主要缺陷
     * 计算：`隐藏层维度` = $32$ 个。
 3.  总计： $320 + 32 = \mathbf{352}$ 个可训练参数。
 
----
 
 **Q7：在反向传播中，我们计算出 Loss 对权重 W 的梯度（$\frac{\partial \text{Loss}}{\partial W}$）后，是如何更新这个权重 W 的？（请写出更新规则）。在这个规则中，“学习率（$\eta$）”扮演了什么角色？**
 
@@ -931,7 +886,6 @@ ReLU 之所以更优，主要是因为它解决了 Sigmoid 的一个主要缺陷
     *  $\eta$ 太大：可能会导致“步子迈太大”，越过最低点，导致 Loss 震荡或发散。
     *  $\eta$ 太小：会导致“小碎步”下山，训练速度过慢，可能需要很久才能收敛。
 
----
 
 **Q8：对于绝大多数金融场景中的“表格数据”（像一个 Excel 表格、数据库表类型的数据），推荐首选哪一类模型（树模型还是MLP）？为什么？**
 
@@ -940,7 +894,6 @@ ReLU 之所以更优，主要是因为它解决了 Sigmoid 的一个主要缺陷
 * 首选模型：树模型（特别是 GBDT）。
 * 原因：对于表格数据，树模型通常训练速度更快、调参更简单、可解释性更强，并且在中小规模的数据集上（金融领域很常见）表现往往优于需要大量数据和复杂调参的 MLP。
 
----
 
 **Q9：一个金融科技团队想用 MLP（神经网络）来预测客户流失，他们的数据集只有 5000 行（样本）和 20 个特征（表格数据）。你认为他们应该优先使用 MLP 吗？为什么？**
 
