--- a/5_ieee-cis.qmd
+++ b/5_ieee-cis.qmd
@@ -86,15 +86,24 @@ title: 项目5：IEEE‑CIS Fraud Detection 学生项目要求
 
 ## 交付与时间线（统一里程碑）
 
-* **W3：立项检查**
+* **W3：立项检查**（第四周上课前提交到学习通/GitHub）
 
-  1. `README.md`（项目背景、分工、数据来源与口径摘要）；
-  2. 可运行的最小脚本（跑通样例数据并生成至少一张图片）；
-  3. 明确任务清单与负责人。
+  * [ ] 项目仓库建立（包含相关文件夹）
+  * [ ] README 包含题目、数据来源、成员分工
+  * [ ] 能在 Python程序脚本/Jupyter Notebook 中加载数据并展示基本统计信息
+  * [ ] 至少一张数据可视化图
 
-* **W7：结项答辩**
+* **W7：结项答辩**（答辩时）
 
-  提交完整复现包（见下 §5）+ 报告（6–8 页）+ 幻灯（6–8 页）+ AI 使用记录。
+  * [ ] 提交完整复现包（见下目录）+ 报告（6–8 页）+ 幻灯（6–8 页）+ AI 使用记录。
+  * [ ] **代码能运行**：按照 README 步骤能复现结果
+  * [ ] **结果齐全**：
+    * 至少对比 2 种模型
+    * 评估指标表格（分类：准确率/召回率/AUC）
+    * 2-3 张关键图（混淆矩阵/ROC 曲线/特征重要性）
+  * [ ] **文档完整**：
+    * README 有复现步骤
+    * 报告有问题描述、方法、结果、分析
 
 ---
 
