--- a/w3_practice.qmd
+++ b/w3_practice.qmd
@@ -1,4 +1,6 @@
-# W3 上机：线性回归的正则化
+---
+title: W3 上机：线性回归的正则化
+---
 
 本上机讲义覆盖 W3 上机大纲：
 
@@ -8,22 +10,20 @@
 - **Part 4**: 交叉验证与参数选择（10分钟）
 - **Part 5**: 正则化路径可视化（选做）
 
-## 学习目标
+**学习目标**
 
 ✅ 掌握 Ridge、Lasso、Elastic Net 的使用
 ✅ 理解正则化参数 α 的作用
 ✅ 学会使用交叉验证选择最优参数
 ✅ 理解 Lasso 的特征选择功能
 
-## ⚠️ 重要提醒
+⚠️ **重要提醒**
 
-1. **正则化前必须标准化特征**
-2. **不要在测试集上选择参数**
-3. **多种方法对比，选择最适合的**
+1. 正则化前必须标准化特征
+2. 不要在测试集上选择参数
+3. 多种方法对比，选择最适合的
 
----
-
-# Part 1: 环境准备与数据加载
+## 环境准备与数据加载
 
 首先导入必要的库，并加载 Boston 房价数据集。
 
@@ -125,9 +125,7 @@ print(f"训练集标准差（应接近1）: {X_train_scaled.std(axis=0).round(3)
 print("\n✓ 标准化完成！")
 ```
 
----
-
-# Part 2: 理解过拟合问题
+## 理解过拟合问题
 
 用多项式回归演示过拟合现象。
 
@@ -201,9 +199,7 @@ print("- 4次多项式：训练误差小，测试误差小 → 刚刚好")
 print("- 15次多项式：训练误差很小，测试误差大 → 过拟合")
 ```
 
----
-
-# Part 3: Ridge、Lasso、Elastic Net 实战
+## Ridge、Lasso、Elastic Net 实战
 
 在 Boston 房价数据上对比四种模型。
 
@@ -384,9 +380,7 @@ print("- Lasso：某些系数变为0（特征选择）")
 print("- Elastic Net：介于 Ridge 和 Lasso 之间")
 ```
 
----
-
-# Part 4: 交叉验证与参数选择
+## 交叉验证与参数选择
 
 使用交叉验证自动选择最优的正则化参数 α。
 
@@ -504,7 +498,7 @@ print("="*80)
 
 ---
 
-# Part 5: 正则化路径可视化（选做）
+## 正则化路径可视化（选做）
 
 观察随着 α 增大，各特征系数如何变化。
 
@@ -567,8 +561,6 @@ print(f"- α = {lasso_cv.alpha_:.3f} (CV选择) 时：{np.sum(lasso_cv.coef_ != 
 print(f"- α = {alphas_path[-1]:.1f} 时：{n_nonzero_path[-1]}个特征保留")
 ```
 
----
-
 ## 总结与思考
 
 ### 本次课程要点
@@ -582,6 +574,6 @@ print(f"- α = {alphas_path[-1]:.1f} 时：{n_nonzero_path[-1]}个特征保留")
 
 ### 重要提醒
 
-⚠️ **正则化前必须标准化特征**
-⚠️ **不要在测试集上选参数**
-⚠️ **用 RidgeCV/LassoCV 自动选择 α**
+⚠️ 正则化前必须标准化特征
+⚠️ 不要在测试集上选参数
+⚠️ 用 RidgeCV/LassoCV 自动选择 α
