--- a/w2_practice.qmd
+++ b/w2_practice.qmd
@@ -1,4 +1,6 @@
-# W2 上机：数据处理与线性回归实践
+---
+title: W2 上机：数据处理与线性回归实践
+---
 
 本上机讲义覆盖 W2 上机大纲：
 
@@ -8,6 +10,8 @@
 - 线性回归训练、评估（MAE/RMSE）、残差分析
 
 数据：使用经典的 Boston Housing 数据集（房价预测数据集）。
+
+## 导入库
 
 ```{python}
 # 导入库
@@ -25,6 +29,8 @@ from sklearn.metrics import mean_absolute_error, mean_squared_error
 plt.rcParams['font.sans-serif'] = ['SimHei']
 plt.rcParams['axes.unicode_minus'] = False
 ```
+
+## 数据读取与基本概览
 
 ```{python}
 # 读取数据与基本概览
@@ -69,6 +75,8 @@ print("\n数据统计:")
 print(df.describe())
 ```
 
+## 缺失值检查
+
 ```{python}
 # 缺失值检查（Boston Housing 数据集通常没有缺失值）
 print('缺失值统计:')
@@ -76,6 +84,8 @@ print(df.isnull().sum())
 print(f"\n总缺失值数量: {df.isnull().sum().sum()}")
 print("Boston Housing 数据集通常没有缺失值，无需额外处理")
 ```
+
+## 异常值检测
 
 ```{python}
 # 异常值可视化与简单检测（以房价为例）
@@ -94,6 +104,8 @@ IQR = Q3 - Q1
 outliers = df[(df['MEDV'] < Q1 - 1.5*IQR) | (df['MEDV'] > Q3 + 1.5*IQR)]
 print(f"房价异常值数量: {len(outliers)}")
 ```
+
+## 数据可视化
 
 ```{python}
 # 可视化：散点图、直方图、相关矩阵
@@ -115,6 +127,8 @@ plt.title('相关系数热力图'); plt.show()
 print('与房价的相关系数：')
 print(corr['MEDV'].sort_values(ascending=False))
 ```
+
+## 线性回归模型训练与评估
 
 ```{python}
 # 训练线性回归并评估（MAE/RMSE）
@@ -141,6 +155,8 @@ for name, coef in zip(features, model.coef_):
     print(f"  {name}: {coef:.3f}")
 print('截距:', round(model.intercept_, 3))
 ```
+
+## 残差分析
 
 ```{python}
 # 残差分析
