--- a/w3_practice.qmd
+++ b/w3_practice.qmd
@@ -1,14 +1,14 @@
 ---
-title: W3 上机：线性回归的正则化
+title: 第三讲上机实践
 ---
 
-本上机讲义覆盖 W3 上机大纲：
+本上机讲义覆盖以下内容：
 
-- **Part 1**: 环境准备与数据加载（10分钟）
-- **Part 2**: 理解过拟合问题（10分钟）
-- **Part 3**: Ridge、Lasso、Elastic Net 实战（15分钟）
-- **Part 4**: 交叉验证与参数选择（10分钟）
-- **Part 5**: 正则化路径可视化（选做）
+- **Part 1**: 环境准备与数据加载
+- **Part 2**: 理解过拟合问题
+- **Part 3**: Ridge、Lasso、Elastic Net 实战
+- **Part 4**: 交叉验证与参数选择
+- **Part 5**: 正则化路径可视化
 
 **学习目标**
 
