--- a/w5_practice.qmd
+++ b/w5_practice.qmd
@@ -1,10 +1,10 @@
 ---
-title: W5 上机：随机森林与 GBDT 实践
+title: 第五讲上机实践
 ---
 
-本上机讲义覆盖 W5 上机大纲：
+本上机讲义覆盖以下内容：
 
-- 读取 W3 预处理后的数据
+- 读取 Titanic 预处理后的数据
 - 随机森林模型训练与超参数调优
 - GBDT（LightGBM）模型训练与超参数调优
 - 三模型对比：决策树 vs 随机森林 vs GBDT
